/*
Copyright © 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbuserOauth;

option go_package = "upms/proto/pbuserOauth";

import "pbcommon/pbcommon.proto";


message UserOauthModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;

  OauthType oauthType = 4;
  string openId = 5; // 微信openId
  string unionId = 6; // 微信unionId
  int64 appId = 7; // 应用id
}

enum OauthType {
  OAUTH_TYPE_NONE = 0;
  OAUTH_TYPE_WECHAT = 1;
  OAUTH_TYPE_QQ = 2;
}

message FindUserOauthArgs{
  pbcommon.PageInfo pageInfo = 1;
  UserOauthModel query = 2;
}

message FindUserOauthReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  UserOauthModel data =3;
  repeated UserOauthModel list = 4;
  int64 total = 5;
}

service UserOauth {
  rpc CreateUserOauth(UserOauthModel) returns(pbcommon.CommonResult){}
  rpc UpdateUserOauth(UserOauthModel) returns(pbcommon.CommonResult){}
  rpc DeleteUserOauth(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindUserOauthById(pbcommon.IdArgs) returns(FindUserOauthReply){}
  rpc FindUserOauthList(FindUserOauthArgs) returns(FindUserOauthReply){}
}